--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,8 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "ConexaoPadrao": "",
-    "SAConnectionString": "",
-    "AzureTableName": "FuncionarioLog"
+    "ConexaoPadrao": "Server=localhost\\sqlexpress; Initial Catalog=Funcionario1; Integrated Security=True; TrustServerCertificate=True"
   }
 }
