--- a/appsettings.json
+++ b/appsettings.json
@@ -5,10 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "ConexaoPadrao": "",
-    "SAConnectionString": "",
-    "AzureTableName": "FuncionarioLog"
-  }
+  "AllowedHosts": "*"
 }
